# reciprocal

./: .gitignore  README.md  pyproject.toml  setup.py
notebooks/: examples.ipynb  test_kspace_integration.ipynb
src/reciprocal/: __init__.py  canvas.py  kspace.py  kvector.py  lattice.py  primitive.py  symmetry.py  unit_cell.py  utils.py
tests/: test_figure_generation.py  test_kspace.py  test_kvector.py  test_lattice.py
