[build-system]
requires = ["setuptools>=42", "wheel"]  # Ensures setuptools is installed and can build wheels
build-backend = "setuptools.build_meta"

[project]
name = "reciprocal"
readme = "README.md"
version = "1.0.0"
description = "utility functions for sampling reciprocal space"
authors = [
    { name = "Phillip Manley", email = "phillip.manley@jcmwave.com" }
]
requires-python = ">=3.12.0"
dependencies = [
    "numpy==2.2.3",
    "matplotlib==3.9.2",
    "scipy==1.13.1",
    "dispersion>=1.0.6",
    "pytest",
    "shapely==2.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",    
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
